--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,13 +1,13 @@
-image: Ubuntu  # образ для сборки
+image: Ubuntu  # РѕР±СЂР°Р· РґР»СЏ СЃР±РѕСЂРєРё
 
-stack: jdk 11  # версия JDK
+stack: jdk 11  # РІРµСЂСЃРёСЏ JDK
 
 branches:
   only:
-    - main  # ветка git
+    - main  # РІРµС‚РєР° git
 
-build: off  # будем использовать свой скрипт сборки
+build: off  # Р±СѓРґРµРј РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ СЃРІРѕР№ СЃРєСЂРёРїС‚ СЃР±РѕСЂРєРё
 
 build_script:
   - chmod +x gradlew
-  - ./gradlew test -Dselenide.headless=true --info  # запускаем тест, флаг --info позволяет выводить больше информации
+  - gradlew test -Dselenide.headless=true
