--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,6 +8,10 @@ branches:
 
 build: off  # будем использовать свой скрипт сборки
 
+install:
+  # запускаем SUT (& означает, что в фоновом режиме не блокируем терминал для запуска тестов)
+  - java -jar ./artifacts/app-order.jar &
+
 build_script:
   - chmod +x gradlew
-  - gradlew test -Dselenide.headless=true
+  - ./gradlew test -Dselenide.headless=true --info  # запускаем тест, флаг --info позволяет выводить больше информации
